--- a/StudentInformationRequest/src/Database/composer.json
+++ b/StudentInformationRequest/src/Database/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cakephp/database",
+    "name": "cakephp/test2",
     "description": "Flexible and powerful Database abstraction library with a familiar PDO-like API",
     "license": "MIT",
     "authors": [
